@@ -4,6 +4,7 @@ Cobbler CHANGELOG
 - ??? - 1.1.1
 - (FEAT) make template replacement use regex module
 - (BUGF) remove bootloader check in settings as that code doesn't need it
+- (BUGF) refinements to image handling
 
 - ??? - 1.1.0
 - devel branch
